# zoo

./: .gitignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  404.html  Dockerfile  README.md  Taskfile.yaml  alembic.ini  docker-compose.yaml  index.html  mkdocs.yaml  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/semantic_release/: release_notes.hbs
.github/workflows/: lint.yaml  release.yaml  test.yaml  tests.yaml
contributing/: index.html
docs/: clients.md  contributing.md  gen_pages.py  index.md  infrastructure.md  openapi.json  openapi.md  project_structure.md  redocly.md
docs/_static/: redocly.html  swagger.html
infrastructure/: index.html
migrations/: README  env.py  script.py.mako
migrations/versions/: 2023_08_13_0009-9c5764f1931c_initial_migration.py  2023_08_13_0025-5ff3a5bf3a14_seed_data.py  2023_08_17_1904-47783d8459db_fastapi_users.py  2023_08_20_1729-e5fccc3522ce_initial_migration.py  2023_08_20_1730-e69c9264375d_seed_data.py
openapi/: index.html
project_structure/: index.html
requirements/: requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-app.txt  requirements-docs.txt  requirements-gen.txt  requirements-test.txt
search/: search_index.json
tests/: conftest.py  test_config.py  test_zoo.py
tests/api/: test_animals_api.py  test_auth_api.py  test_exhibits_api.py  test_failures.py  test_staff_api.py  test_utils.py
tests/backend/: test_animals.py
tests/models/: test_animals_models.py
tests/schema/: test_animals_schema.py  test_base_schema.py
zoo/: __init__.py  __main__.py  _version.py  app.py  config.py  db.py
zoo/api/: animals.py  exhibits.py  staff.py  utils.py
zoo/application/: animals.py
zoo/backend/: __init__.py  animals.py  exhibits.py  staff.py  utils.py
zoo/models/: __init__.py  animals.py  base.py  exhibits.py  staff.py  user.py  users.py  utils.py
zoo/schemas/: animals.py  base.py  exhibits.py  staff.py  users.py  utils.py
